# dj_tool

./: .gitignore  Cargo.toml  FlacHandler.rs  LICENSE.md  README.md  mod.rs  pyproject.toml
cmd/: README.md  benchmark.py  get_waves.py  main.py
python_impl/: CNN.py  downloader.sh  embeddings.py  extract_audio_features.py  main.py  make_dataset.py  make_spec.py
src/: converter.rs  encoder.rs  folder_crawler.rs  main.rs  parse_path.rs
src/core/: decoder_legacy.rs  encoder.rs  folder_crawler.rs  lib.rs  mod.rs  parse_path.rs
src/core/audio/: decoder.rs  encoder.rs  mod.rs
src/core/spectrogram/: fft.rs  mel.rs  mfcc.rs  mod.rs
